// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual proof snapshots > dag-loaded 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full"
        >
          <div
            class="h-full w-full"
            style="min-height: 300px;"
          >
            <div
              class="react-flow"
              data-testid="mock-react-flow"
            >
              <div
                class="react-flow__node"
                data-testid="rf__node-task-alpha"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-alpha"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    First test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
              <div
                class="react-flow__node"
                data-testid="rf__node-task-beta"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-beta"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    Second test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full flex items-center justify-center text-gray-500 p-4"
          >
            <p>
              Select a task from the graph to view details
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          2
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          2
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual proof snapshots > empty-state 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full flex items-center justify-center text-gray-500 text-sm"
        >
          Load a plan to get started
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full flex items-center justify-center text-gray-500 p-4"
          >
            <p>
              Select a task from the graph to view details
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual proof snapshots > task-complete 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full"
        >
          <div
            class="h-full w-full"
            style="min-height: 300px;"
          >
            <div
              class="react-flow"
              data-testid="mock-react-flow"
            >
              <div
                class="react-flow__node"
                data-testid="rf__node-task-alpha"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-green-500/30 "
                  title="task-alpha"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-green-500 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    First test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    COMPLETED
                  </div>
                </div>
              </div>
              <div
                class="react-flow__node"
                data-testid="rf__node-task-beta"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-green-500/30 "
                  title="task-beta"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-green-500 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    Second test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    COMPLETED
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full flex items-center justify-center text-gray-500 p-4"
          >
            <p>
              Select a task from the graph to view details
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          2
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          2
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual proof snapshots > task-panel 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full"
        >
          <div
            class="h-full w-full"
            style="min-height: 300px;"
          >
            <div
              class="react-flow"
              data-testid="mock-react-flow"
            >
              <div
                class="react-flow__node"
                data-testid="rf__node-task-alpha"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-alpha"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    First test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
              <div
                class="react-flow__node"
                data-testid="rf__node-task-beta"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-beta"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    Second test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full overflow-y-auto p-4 space-y-4"
          >
            <div>
              <h2
                class="text-lg font-semibold text-gray-100 truncate"
              >
                First test task
              </h2>
              <p
                class="text-xs font-mono text-gray-400 mt-1"
              >
                task-alpha
              </p>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <span
                class="inline-flex items-center gap-1.5 px-2 py-1 rounded text-xs font-medium bg-slate-800/95 text-slate-100"
              >
                <span
                  class="w-2 h-2 rounded-full bg-slate-400 "
                />
                PENDING
              </span>
            </div>
            <div
              class="border-t border-gray-700 pt-3"
            >
              <button
                class="flex items-center gap-2 text-sm text-gray-300 hover:text-gray-100 transition-colors w-full"
                data-testid="advanced-toggle"
              >
                <span
                  class="text-gray-500"
                >
                  ▼
                </span>
                <span>
                  Advanced
                </span>
              </button>
              <div
                class="mt-3 space-y-3"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <span
                    class="text-sm text-gray-400"
                  >
                    Run on
                  </span>
                  <select
                    class="bg-gray-700 text-gray-200 text-xs rounded px-2 py-1 border border-gray-600 focus:outline-none focus:border-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
                    data-testid="executor-type-select"
                  >
                    <option
                      value="worktree"
                    >
                      Worktree
                    </option>
                    <option
                      value="docker"
                    >
                      Docker
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div>
              <div
                class="flex items-center justify-between"
              >
                <span
                  class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-gray-700 text-gray-300"
                >
                  Command
                </span>
              </div>
              <div
                class="mt-2 rounded p-3 text-xs select-text bg-gray-800 border border-gray-700 cursor-pointer hover:border-gray-600 transition-colors"
                data-testid="command-display"
              >
                <code
                  class="text-green-300 font-mono whitespace-pre-wrap"
                >
                  echo hello-alpha
                </code>
              </div>
            </div>
            <div
              class="space-y-1 text-sm"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Created
                </span>
                <span
                  class="text-gray-200"
                >
                  12:00:00 AM
                </span>
              </div>
            </div>
            <div
              class="space-y-2 pt-2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          2
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          2
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual proof snapshots > task-panel-agent-selector 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full"
        >
          <div
            class="h-full w-full"
            style="min-height: 300px;"
          >
            <div
              class="react-flow"
              data-testid="mock-react-flow"
            >
              <div
                class="react-flow__node"
                data-testid="rf__node-task-alpha"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-alpha"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    Agent selector task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full overflow-y-auto p-4 space-y-4"
          >
            <div>
              <h2
                class="text-lg font-semibold text-gray-100 truncate"
              >
                Agent selector task
              </h2>
              <p
                class="text-xs font-mono text-gray-400 mt-1"
              >
                task-alpha
              </p>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <span
                class="inline-flex items-center gap-1.5 px-2 py-1 rounded text-xs font-medium bg-slate-800/95 text-slate-100"
              >
                <span
                  class="w-2 h-2 rounded-full bg-slate-400 "
                />
                PENDING
              </span>
            </div>
            <div
              class="border-t border-gray-700 pt-3"
            >
              <button
                class="flex items-center gap-2 text-sm text-gray-300 hover:text-gray-100 transition-colors w-full"
                data-testid="advanced-toggle"
              >
                <span
                  class="text-gray-500"
                >
                  ▼
                </span>
                <span>
                  Advanced
                </span>
              </button>
              <div
                class="mt-3 space-y-3"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <span
                    class="text-sm text-gray-400"
                  >
                    Run on
                  </span>
                  <select
                    class="bg-gray-700 text-gray-200 text-xs rounded px-2 py-1 border border-gray-600 focus:outline-none focus:border-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
                    data-testid="executor-type-select"
                  >
                    <option
                      value="worktree"
                    >
                      Worktree
                    </option>
                    <option
                      value="docker"
                    >
                      Docker
                    </option>
                  </select>
                </div>
                <div
                  class="flex items-center justify-between"
                >
                  <span
                    class="text-sm text-gray-400"
                  >
                    Agent
                  </span>
                  <select
                    class="bg-gray-700 text-gray-200 text-xs rounded px-2 py-1 border border-gray-600 focus:outline-none focus:border-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
                    data-testid="execution-agent-select"
                  >
                    <option
                      value="claude"
                    >
                      Claude
                       Task
                    </option>
                    <option
                      value="codex"
                    >
                      Codex
                       Task
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div>
              <div
                class="flex items-center justify-between"
              >
                <span
                  class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-blue-900/40 text-blue-300"
                >
                  Claude Task
                </span>
              </div>
              <div
                class="mt-2 rounded p-3 text-xs select-text bg-blue-900/20 border border-blue-800 cursor-text"
                data-testid="command-display"
              >
                <p
                  class="text-gray-300 whitespace-pre-wrap"
                >
                  Write tests for the agent selector
                </p>
              </div>
            </div>
            <div
              class="space-y-1 text-sm"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Created
                </span>
                <span
                  class="text-gray-200"
                >
                  12:00:00 AM
                </span>
              </div>
            </div>
            <div
              class="space-y-2 pt-2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          1
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          1
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual proof snapshots > task-running 1`] = `
<div>
  <div
    class="h-screen flex flex-col bg-gray-900 text-gray-100"
  >
    <div
      class="h-12 bg-gray-800 border-b border-gray-700 flex items-center px-4 gap-3 shrink-0"
    >
      <label
        class="px-3 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors cursor-pointer"
      >
        Open File
        <input
          accept=".json,.yaml,.yml"
          class="hidden"
          type="file"
        />
      </label>
      <div
        class="flex rounded overflow-hidden border border-gray-600"
      >
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-indigo-600 text-white"
        >
          DAG
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Timeline
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          History
        </button>
        <button
          class="px-3 py-1 text-xs font-medium transition-colors bg-gray-700 hover:bg-gray-600 text-gray-300"
        >
          Queue
        </button>
      </div>
      <div
        class="flex-1"
      />
      <div
        class="relative"
      >
        <button
          aria-label="Utility menu"
          class="px-2 py-1.5 bg-gray-600 hover:bg-gray-500 text-white rounded text-xs font-medium transition-colors"
          title="Utility menu"
        >
          •••
        </button>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden"
    >
      <div
        class="w-3/5 border-r border-gray-700"
      >
        <div
          class="h-full"
        >
          <div
            class="h-full w-full"
            style="min-height: 300px;"
          >
            <div
              class="react-flow"
              data-testid="mock-react-flow"
            >
              <div
                class="react-flow__node"
                data-testid="rf__node-task-alpha"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-blue-400/25 "
                  title="task-alpha"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-blue-400 pulse-strong"
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    First test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    RUNNING
                  </div>
                </div>
              </div>
              <div
                class="react-flow__node"
                data-testid="rf__node-task-beta"
              >
                <div
                  class="relative w-[264px] rounded-2xl border px-5 py-4 transition-opacity duration-75 shadow-[0_6px_24px_rgba(0,0,0,0.28)] bg-slate-800/95 border-white/10 "
                  title="task-beta"
                >
                  <span
                    class="absolute left-0 top-0 bottom-0 w-1.5 rounded-l-2xl bg-slate-400 "
                  />
                  <div
                    class="text-2xl font-medium truncate pl-3 text-slate-100 "
                  >
                    Second test task
                  </div>
                  <div
                    class="mt-1 pl-3 text-sm uppercase tracking-wide text-slate-100 opacity-75"
                  >
                    PENDING
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-2/5 flex flex-col"
      >
        <div
          class="flex-1 overflow-hidden bg-gray-800"
        >
          <div
            class="h-full flex items-center justify-center text-gray-500 p-4"
          >
            <p>
              Select a task from the graph to view details
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-6 px-4 py-2 bg-gray-800 border-t border-gray-700 text-sm"
    >
      <span
        class="text-gray-400"
      >
        Total: 
        <span
          class="text-gray-100 font-medium"
        >
          2
        </span>
      </span>
      <span
        class="text-green-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Completed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-blue-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Running: 
        <span
          class="font-medium"
        >
          1
        </span>
      </span>
      <span
        class="text-red-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Failed: 
        <span
          class="font-medium"
        >
          0
        </span>
      </span>
      <span
        class="text-gray-300/70 px-2 py-0.5 text-xs rounded-full cursor-pointer select-none transition-opacity duration-75 hover:brightness-125"
      >
        Pending: 
        <span
          class="font-medium"
        >
          1
        </span>
      </span>
    </div>
  </div>
</div>
`;
